--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,14 @@
 <script src="libs/stats.min.js"></script>
 <script src="libs/OrbitControls.js"></script>
 <script src="libs/dat.GUI.min.js"></script>
+<script src="scripts/config.js"></script>
+<script src="scripts/kit.js"></script>
 <script src="scripts/Container.js"></script>
 <script src="scripts/generateShape.js"></script>
 <script src="scripts/generateMaterial.js"></script>
+<script src="scripts/Node.js"></script>
+<script src="scripts/draw.js"></script>
+<script src="scripts/controller.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
