--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 <script src="scripts/Node.js"></script>
 <script src="scripts/draw.js"></script>
 <script src="scripts/controller.js"></script>
+<script src="scripts/toolBar.js"></script>
+<script src="scripts/control.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
