--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-<div class="container" id = "toolbar"></div>
-<div class="container" id = "showArea"></div>
-<div class="container" id = "operate"></div>
+<div class = "container" id = "topArea">
+	<div class="container" id = "toolbar"></div>
+	<div class="container" id = "showArea"></div>
+	<div class="container" id = "operate"></div>
+</div>
+<div class = "container" id = "timeline"></div>
 <script src="libs/three.min.js"></script>
 <script src="libs/stats.min.js"></script>
 <script src="libs/OrbitControls.js"></script>
