--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 <script src="scripts/Node.js"></script>
 <script src="scripts/draw.js"></script>
 <script src="scripts/controller.js"></script>
+<script src="scripts/nodeBindDom.js"></script>
 <script src="scripts/toolBar.js"></script>
 <script src="scripts/control.js"></script>
 <script src="scripts/main.js"></script>
