--- a/src/index.html
+++ b/src/index.html
@@ -13,21 +13,7 @@
 	<div class="container" id = "operate"></div>
 </div>
 <div class = "container" id = "timeline"></div>
-<script src="libs/three.min.js"></script>
-<script src="libs/stats.min.js"></script>
-<script src="libs/OrbitControls.js"></script>
-<script src="libs/dat.GUI.min.js"></script>
-<script src="scripts/config.js"></script>
-<script src="scripts/kit.js"></script>
-<script src="scripts/Container.js"></script>
-<script src="scripts/generateShape.js"></script>
-<script src="scripts/generateMaterial.js"></script>
-<script src="scripts/Node.js"></script>
-<script src="scripts/draw.js"></script>
-<script src="scripts/controller.js"></script>
-<script src="scripts/nodeBindDom.js"></script>
-<script src="scripts/toolBar.js"></script>
-<script src="scripts/control.js"></script>
-<script src="scripts/main.js"></script>
+
+<script src="../dist/controls.js"></script>
 </body>
 </html>
